templates/templates_Deployment_templates.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: templates
spec:
  replicas: 1
  selector:
    matchLabels:
      transpire.ocf.io/deployment: templates
  template:
    metadata:
      labels:
        transpire.ocf.io/deployment: templates
    spec:
      containers:
      - image: harbor.ocf.berkeley.edu/ocf/templates/templates:8d9ececcd091d0e24578e34a7cfc77f39e4b23c2
        imagePullPolicy: IfNotPresent
        name: main
        ports:
        - containerPort: 3000
