templates/templates_Service_templates.yaml
apiVersion: v1
kind: Service
metadata:
  name: templates
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    transpire.ocf.io/deployment: templates
