templates/templates_Ingress_templates.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/force-ssl-redirect: 'true'
    io.cilium/websocket: enabled
    kubernetes.io/tls-acme: 'true'
    projectcontour.io/websocket-routes: /
  name: templates
spec:
  ingressClassName: cilium
  rules:
  - host: templates.ocf.berkeley.edu
    http:
      paths:
      - backend:
          service:
            name: templates
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - templates.ocf.berkeley.edu
    secretName: templates-tls
